Code reformat & Delete un used object